# physical

./: .gitignore  0622_summary.md  README.md  report.md
M7/my_nd1_m7/: README.md  hello_robot.py  odometry.py  quaternion.py
M8/: README.md
M8/nd1_m8_template_data/nd1_m8_template_data/: .gitignore  README.md  RUNBOOK.md  package.xml  requirements.txt  run.sh  setup.py
M8/nd1_m8_template_data/nd1_m8_template_data/docs/: README_docs.md
M8/nd1_m8_template_data/nd1_m8_template_data/m8_robot/: __init__.py  cp0_square_mover.py  cp1_5_sensor_filter.py  cp1_robot_mover.py  cp2_slam_mapper.py  cp3_nav2_client.py  m7_to_ros2_bridge.py
M8/nd1_m8_template_data/nd1_m8_template_data/notebooks/: 01_quickstart.ipynb
M8/nd1_m8_template_data/nd1_m8_template_data/results/: README_results.md
M8/nd1_m8_template_data/nd1_m8_template_data/scripts/: analyze_map.py  verify_environment.py
M8/nd1_m8_template_data/nd1_m8_template_data/solutions/: README.md  cp1_robot_mover_solution.py  cp3_nav2_client_solution.py
M8/nd1_m8_template_data/nd1_m8_template_data/tests/: conftest.py  test_coverage_calc.py  test_nav2_goals.py  test_ros2_topics.py
ND3/ND3_15_stable_labs_lab0_8_official/: .gitignore  COMMANDS_ONLY.txt  README.md  START_HERE.md  report.md  requirements_python.txt
capstone/: README.md  aruco_detector.py  runbook.md  tb3_nav_waypoint.py
my_nd1_m7/notebooks/: 01_coordinate_transforms.ipynb  02_2dof_forward_kinematics.ipynb
my_nd1_m7/results/: M7_lab2_summary.csv  M7_lab4_6dof_summary.csv  M7_lab4_summary.csv
my_nd1_m7/scripts/: lab1_step4_validation.py  (+4 more)
(+101 files in other folders)
